# claude-telegram-bot

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  cron.yaml  mcp-config.example.json  package.json  save-and-restart.sh
.beads/: bd.sock.startlock  issues.jsonl
docs/: specs.md  wsl-service-guide.md
docs/rust-port/: architecture.md  archive-security.md  claude-cli-stream-json.md  mcp-config-migration.md  messaging.md  model.md  parity-checklist.md
docs/rust-port/fixtures/: claude-stream-json.invalid-api-key.jsonl  claude-stream-json.sample.jsonl  claude-stream-json.synthetic-tool-use.jsonl
docs/tasks/save/: restart-context-20260202-012323.md  restart-context-20260202-015716.md
launchagent/: com.claude-telegram-rs.plist.template  start-rust.sh
rust/: Cargo.toml
rust/crates/ctb/: Cargo.toml
rust/crates/ctb-ask-user-mcp/: Cargo.toml
rust/crates/ctb-ask-user-mcp/src/: main.rs
rust/crates/ctb-claude-cli/: Cargo.toml
rust/crates/ctb-claude-cli/src/: lib.rs
rust/crates/ctb-core/: Cargo.toml
rust/crates/ctb-core/src/: archive_security.rs  config.rs  domain.rs  errors.rs  formatting.rs  lib.rs  logging.rs  mcp_config.rs  ports.rs  scheduler.rs  security.rs  session.rs  streaming.rs  usage.rs  utils.rs
rust/crates/ctb-core/src/messaging/: mod.rs  port.rs  throttled.rs  types.rs
rust/crates/ctb-core/src/model/: client.rs  mod.rs  types.rs
rust/crates/ctb-openai/: Cargo.toml
rust/crates/ctb-openai/src/: lib.rs
rust/crates/ctb-telegram/: Cargo.toml
rust/crates/ctb-telegram/src/: lib.rs  router.rs
rust/crates/ctb-telegram/src/handlers/: callback.rs  commands.rs  document.rs  media_group.rs  mod.rs  photo.rs  prompt.rs  text.rs  voice.rs
rust/crates/ctb/src/: main.rs
src/: config.ts  formatting.ts  index.ts  scheduler.ts  session.ts  types.ts
src/handlers/: callback.ts  commands.ts  document.ts  index.ts  photo.ts  streaming.ts  text.ts  voice.ts
systemd/: claude-telegram-rs.service.template
