[workspace]
resolver = "2"
members = [
  "crates/ctb",
  "crates/ctb-core",
  "crates/ctb-claude-cli",
  "crates/ctb-ask-user-mcp",
  "crates/ctb-openai",
  "crates/ctb-telegram",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
flate2 = "1.1.2"
regex = "1.12.2"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
teloxide = { version = "0.12.2", default-features = false, features = ["macros", "rustls"] }
thiserror = "1.0.69"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process", "io-util", "io-std", "time", "sync", "fs"] }
tokio-util = { version = "0.7.16" }
zip = "0.6.6"
