[package]
name = "ctb-claude-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
ctb-core = { path = "../ctb-core" }
tokio.workspace = true
tokio-util.workspace = true

[features]
default = []
