[package]
name = "ctb"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ctb-claude-cli = { path = "../ctb-claude-cli" }
ctb-core = { path = "../ctb-core" }
ctb-telegram = { path = "../ctb-telegram" }
tokio.workspace = true

[features]
default = []
tracing = ["ctb-core/tracing"]
